--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes App</title>
+    <title>Notes App for SI</title>
     <style>
         body {
             font-family: Arial;
@@ -613,3 +613,4 @@
     </script>
 </body>
 </html>
+
